# aoc24

./: day1.py  del  new  pyproject.toml  utils.py
py/: new  pyproject.toml
py/src/: day1.py  day3.py  day4.py  day5.py  day6.py  run_day.py  utils.py
py/test/: .test_day2.py  .test_day3.py  .test_day4.py  .test_day5.py  test_day4.py  test_day6.py
rs/: Cargo.toml  del  new
rs/src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  utils.rs
rs/src/utils/: grid.rs  mod.rs
src/: day1.py  day2.py  day3.py  day4.py  run_day.py  utils.py
test/: test_day2.py  test_day3.py  test_day4.py
