[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"


[[bin]]
name = "day8"
path = "src/day8.rs"


[[bin]]
name = "day9"
path = "src/day9.rs"


[[bin]]
name = "day10"
path = "src/day10.rs"


[[bin]]
name = "day11"
path = "src/day11.rs"


[[bin]]
name = "day12"
path = "src/day12.rs"


[[bin]]
name = "day13"
path = "src/day13.rs"


[[bin]]
name = "day14"
path = "src/day14.rs"

[dependencies]
itertools = "0.14.0"

